--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,34 @@
 {
-    "name": "journy/demo",
+    "name": "journy-io/demo-app",
+    "description": "This demo application shows you how you can use our PHP SDK to track events and update properties.",
     "license": "UNLICENSED",
     "authors": [
         {
-            "name": "Hans Ott",
-            "email": "hansott@hotmail.be"
+            "name": "journy.io",
+            "email": "hi@journy.io"
         }
     ],
     "require": {
-        "league/route": "^4.3",
-        "zendframework/zend-diactoros": "^2.1",
-        "zendframework/zend-httphandlerrunner": "^1.1",
-        "twig/twig": "^2.0"
+        "twig/twig": "^3.3",
+        "league/route": "^5.0",
+        "nyholm/psr7": "^1.4",
+        "laminas/laminas-httphandlerrunner": "^1.3",
+        "psr7-sessions/storageless": "^8.0",
+        "moneyphp/money": "^3.3",
+        "ramsey/uuid": "^4.1",
+        "ext-json": "*",
+        "vlucas/phpdotenv": "^5.3",
+        "nyholm/psr7-server": "^1.0",
+        "ext-intl": "*",
+        "kriswallsmith/buzz": "^1.2",
+        "journy-io/sdk": "^3.0"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-latest"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
