--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "twig/twig": "^3.3",
         "league/route": "^5.0",
         "nyholm/psr7": "^1.4",
-        "laminas/laminas-httphandlerrunner": "^1.3",
+        "laminas/laminas-httphandlerrunner": "^1.4",
         "psr7-sessions/storageless": "^8.0",
         "moneyphp/money": "^3.3",
         "ramsey/uuid": "^4.1",
@@ -21,14 +21,15 @@
         "nyholm/psr7-server": "^1.0",
         "ext-intl": "*",
         "kriswallsmith/buzz": "^1.2",
-        "journy-io/sdk": "^3.0"
+        "journy-io/sdk": "^3.0",
+        "giggsey/libphonenumber-for-php": "^8.12"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "ShopManager\\": "src/"
         }
     }
 }
