--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,15 @@
         "giggsey/libphonenumber-for-php": "^8.12"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
+        "roave/security-advisories": "dev-latest",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "autoload": {
         "psr-4": {
             "ShopManager\\": "src/"
         }
+    },
+    "scripts": {
+        "fix-cs": "phpcbf --standard=PSR12 src && phpcbf --standard=PSR12 public/index.php"
     }
 }
